# agent-gateway

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SpecSheet.txt  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
agents/: executor.py  policies.py  proper_example.py  sdk_example.py
api/: __init__.py  auth.py  main.py  middleware.py
config/: __init__.py  agents.yaml  settings.py  tools.yaml  upstreams.yaml
docs/: AgentGateway_10-Step_Development_Plan.md  CodeReview.md  DropInAgentGuide.md  DropInAgents_TestPlan.md  OldDevPlan.md  OperatorRunbook.md  README.md  RELEASE.md  SDKOnboarding.md  Troubleshooting.md  UserManual.md  security.md  tooling.md
load/: locustfile.py
observability/: logging.py
registry/: discovery.py  models.py  upstreams.py
scripts/: dev-server.ps1  generate_sbom.sh  install_agent_deps.py  nightly_audit.py  release.sh
sdk_adapter/: __init__.py  adapter.py
security/: manager.py  models.py
tests/: __init__.py  conftest.py  test_admin_metrics.py  test_agent_discovery.py  test_agent_executor_tools.py  test_agent_registry.py  test_dropin_agents_acceptance.py  test_examples_discovery.py  test_executor_streaming.py  test_gateway_tools.py  test_mcp_client.py  test_models_endpoint.py  test_sdk_adapter.py  test_sdk_adapter_streaming.py  test_sdk_tool_governance.py  test_security_manager.py  test_smoke_gateway.py  test_streaming_error_handling.py  test_streaming_executor.py  test_streaming_utils.py  test_tool_manager.py  test_upstream_registry.py
tooling/: local_tools.py  mcp_client.py
(+86 files in other folders)
